# ext_taskbar

./: .clang-format  CMakeLists.txt  README.md  icon_viewer.cpp  icon_viewer.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mime_viewer.cpp  mime_viewer.hpp  quick_launch.cpp  quick_launch.hpp  quick_launch.json  start_menu.cpp  start_menu.hpp  task_manager.cpp  task_manager.hpp  unifont.qrc
